POCAPIDiscoveryA/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          tracing:
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                collector_cluster: jaeger
                collector_endpoint: "/api/v2/spans"
                shared_span_context: false
                collector_endpoint_version: HTTP_JSON
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: inbound_route
            virtual_hosts:
            - name: discoveryA
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/discovery"
                route:
                  cluster: local_service
                decorator:
                  operation: request-discoveryA
          http_filters:
          - name: envoy.filters.http.router
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          tracing:
            provider:
              name: envoy.tracers.zipkin
              typed_config:
                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
                collector_cluster: jaeger
                collector_endpoint: "/api/v2/spans"
                shared_span_context: false
                collector_endpoint_version: HTTP_JSON
          codec_type: AUTO
          stat_prefix: egress_http
          route_config:
            name: outbound_route
            virtual_hosts:
            - name: discovery-b
              domains:
              - "discovery-b"
              routes:
              - match:
                  prefix: "/discovery/DiscoveryB"
                route:
                  cluster: discovery-b
                decorator:
                  operation: request-discoveryB-from-discoveryA
            - name: discovery-c
              domains:
              - "discovery-c"
              routes:
              - match:
                  prefix: "/discovery/DiscoveryC"
                route:
                  cluster: discovery-c
                decorator:
                  operation: request-discoveryC-from-discoveryA
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: local_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
  - name: discovery-b
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: discovery-b
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: discovery-b
                port_value: 8000
  - name: discovery-c
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: discovery-c
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: discovery-c
                port_value: 8000                
  - name: jaeger
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: jaeger
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: jaeger
                port_value: 9411
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
